Premier push du projet

--- a/public/pages/mes-partenaires.html
+++ b/public/pages/mes-partenaires.html
@@ -8,24 +8,26 @@
 <body>
 
     <header>
-        <a href="../../index.html" id="returnHome"><img src="../media/image/imgTitre2.jpg" alt=""></a>
-        <h1 id="PageTitle" class="title">Baie des anges</h1>
-    </header>
+        <a href="../../index.html" class="flex">
+            <img src="../media/image/logo.png" alt="">
+            <h1>Baie des anges</h1>
+        </a>
 
-    <nav>
-        <a href="../../index.html">
-            Accueil
-        </a>
-        <a href="mes-prestations.html">
-            Mes prestations
-        </a>
-        <a href="prendre-rendez-vous.html">
-            Prendre rendez-vous
-        </a>
-        <a href="guidance.html">
-            Guidance ésotérique
-        </a>
-    </nav>
+        <nav class="flex row">
+            <a href="../../index.html">
+                Accueil
+            </a>
+            <a href="mes-prestations.html">
+                Mes prestations
+            </a>
+            <a href="prendre-rendez-vous.html">
+                Prendre rendez-vous
+            </a>
+            <a href="guidance.html">
+                Guidance ésotérique
+            </a>
+        </nav>
+    </header>
 
     <section>
         <h1>Mes partenaires</h1>
