--- a/index.html
+++ b/index.html
@@ -8,29 +8,31 @@
 <body>
 
     <header>
-        <a href="index.html" id="returnHome"><img src="public/media/image/imgTitre2.jpg" alt=""></a>
-        <h1>Baie des anges</h1>
-    </header>
 
-    <nav>
-        <a href="public/pages/mes-prestations.html">
-            Mes prestations
+        <a href="index.html" class="flex">
+            <img src="public/media/image/logo.png" alt="">
+            <h1>Baie des anges</h1>
         </a>
-        <a href="public/pages/prendre-rendez-vous.html">
-            Prendre rendez-vous
-        </a>
-        <a href="public/pages/mes-partenaires.html">
-            Mes partenaires
-        </a>
-        <a href="public/pages/guidance.html">
-            Guidance ésotérique
-        </a>
-    </nav>
+        <nav class="flex row">
+            <a href="public/pages/mes-prestations.html">
+                Mes prestations
+            </a>
+            <a href="public/pages/prendre-rendez-vous.html">
+                Prendre rendez-vous
+            </a>
+            <a href="public/pages/mes-partenaires.html">
+                Mes partenaires
+            </a>
+            <a href="public/pages/guidance.html">
+                Guidance ésotérique
+            </a>
+        </nav>
+    </header>
 
     <section>
         <h1>Qui je suis ?</h1>
         <div class="flex row">
-            <img src="public/media/image/aliments-sains.png" alt="">
+            <img src="public/media/image/salle-de-massage.jpg" alt="">
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam suscipit aliquet orci et pellentesque.
                 Phasellus finibus porttitor velit vitae mattis. Sed libero justo, consequat nec ornare vel, congue a
@@ -44,17 +46,24 @@
         </div>
     </section>
 
-    <section class="flex row">
-        <p>
-            Quisque non diam id turpis vehicula interdum rutrum in lectus. Integer ut tincidunt dolor. Nam bibendum
-            elementum turpis, nec dictum nibh volutpat at. Etiam lobortis consequat tempor. Sed blandit nunc in interdum
-            viverra. Vestibulum ultrices commodo metus, ut hendrerit tellus fringilla in. Donec dignissim libero quis
-            nunc maximus, et auctor neque efficitur. Praesent rhoncus eu elit eu congue. Cras sed diam pharetra, tempus
-            mauris a, imperdiet ligula. Curabitur non metus porta, dapibus mauris sed, luctus erat. Curabitur facilisis
-            dolor enim, in consequat nulla luctus et. Quisque quis vulputate neque. Phasellus in orci ut arcu rhoncus
-            efficitur in quis eros. Morbi feugiat mi sem, non viverra sapien ultrices non.
-        </p>
-        <img src="public/media/image/pendules.jpg" alt="">
+    <section>
+        <div class="flex row">
+            <p>
+                Quisque non diam id turpis vehicula interdum rutrum in lectus. Integer ut tincidunt dolor. Nam bibendum
+                elementum turpis, nec dictum nibh volutpat at. Etiam lobortis consequat tempor. Sed blandit nunc in
+                interdum
+                viverra. Vestibulum ultrices commodo metus, ut hendrerit tellus fringilla in. Donec dignissim libero
+                quis
+                nunc maximus, et auctor neque efficitur. Praesent rhoncus eu elit eu congue. Cras sed diam pharetra,
+                tempus
+                mauris a, imperdiet ligula. Curabitur non metus porta, dapibus mauris sed, luctus erat. Curabitur
+                facilisis
+                dolor enim, in consequat nulla luctus et. Quisque quis vulputate neque. Phasellus in orci ut arcu
+                rhoncus
+                efficitur in quis eros. Morbi feugiat mi sem, non viverra sapien ultrices non.
+            </p>
+            <img src="public/media/image/salle-de-massage2.jpg" alt="">
+        </div>
     </section>
 
 </body>
