--- a/public/pages/mes-prestations.html
+++ b/public/pages/mes-prestations.html
@@ -8,9 +8,12 @@
 <body>
 
     <header>
-        <a href="../../index.html" id="returnHome"><img src="../media/image/imgTitre2.jpg" alt=""></a>
-        <h1 id="PageTitle" class="title">Baie des anges</h1>
-        <nav>
+        <a href="../../index.html" class="flex">
+            <img src="../media/image/logo.png" alt="">
+            <h1>Baie des anges</h1>
+        </a>
+
+        <nav class="flex row">
             <a href="../../index.html">
                 Accueil
             </a>
@@ -27,10 +30,9 @@
     </header>
 
 
-
     <section>
-
         <h1>Mes prestations</h1>
+        <!-- Génération des pastilles "Offre découverte" -->
         <div class="flex row justify-space-evenly">
             <ul class="offreDecouvPalRou">
                 <li>OFFRE DECOUVERTE</li>
@@ -81,19 +83,69 @@
             </ul>
 
         </div>
+
     </section>
+    <hr>
+    <!-- Sections descriptions de chaque prestation + tarif -->
     <section>
+        <h1>Massage californien</h1>
         <div class="flex row">
             <img src="../media/image/aliments-sains.png" alt="">
-            <p>
+
+            <p class="flex">
+                <span>Tarif 60€</span>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam suscipit aliquet orci et pellentesque.
                 Phasellus finibus porttitor velit vitae mattis. Sed libero justo, consequat nec ornare vel, congue a
                 enim. Vivamus semper condimentum odio eu elementum. Nulla venenatis a magna sit amet consectetur. Sed id
                 blandit neque, sed pellentesque lacus. Curabitur vitae dictum nunc, quis rutrum ante. Morbi quis
-                suscipit
-                tellus, sed pretium mauris. Donec posuere elit eu dictum condimentum. Pellentesque interdum purus massa,
-                at
-                sodales sem fermentum ornare. Duis pulvinar nisi ut diam luctus, a pharetra ligula tristique.
+                suscipit tellus, sed pretium mauris. Donec posuere elit eu dictum condimentum. Pellentesque interdum
+                purus massa, at sodales sem fermentum ornare. Duis pulvinar nisi ut diam luctus, a pharetra ligula
+                tristique.
+            </p>
+        </div>
+        <hr>
+        <h1>Massage palper-rouler</h1>
+        <div class="flex row">
+            <img src="../media/image/aliments-sains.png" alt="">
+            <p class="flex">
+                <span>Tarif 60€</span>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam suscipit aliquet orci et pellentesque.
+                Phasellus finibus porttitor velit vitae mattis. Sed libero justo, consequat nec ornare vel, congue a
+                enim. Vivamus semper condimentum odio eu elementum. Nulla venenatis a magna sit amet consectetur. Sed id
+                blandit neque, sed pellentesque lacus. Curabitur vitae dictum nunc, quis rutrum ante. Morbi quis
+                suscipit tellus, sed pretium mauris. Donec posuere elit eu dictum condimentum. Pellentesque interdum
+                purus massa, at sodales sem fermentum ornare. Duis pulvinar nisi ut diam luctus, a pharetra ligula
+                tristique.
+            </p>
+        </div>
+        <hr>
+        <h1>Massage femmes enceinte</h1>
+        <div class="flex row">
+            <img src="../media/image/aliments-sains.png" alt="">
+            <p class="flex">
+                <span>Tarif 60€</span>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam suscipit aliquet orci et pellentesque.
+                Phasellus finibus porttitor velit vitae mattis. Sed libero justo, consequat nec ornare vel, congue a
+                enim. Vivamus semper condimentum odio eu elementum. Nulla venenatis a magna sit amet consectetur. Sed id
+                blandit neque, sed pellentesque lacus. Curabitur vitae dictum nunc, quis rutrum ante. Morbi quis
+                suscipit tellus, sed pretium mauris. Donec posuere elit eu dictum condimentum. Pellentesque interdum
+                purus massa, at sodales sem fermentum ornare. Duis pulvinar nisi ut diam luctus, a pharetra ligula
+                tristique.
+            </p>
+        </div>
+        <hr>
+        <h1>Massage pierres chaudes</h1>
+        <div class="flex row">
+            <img src="../media/image/aliments-sains.png" alt="">
+            <p class="flex">
+                <span>Tarif 60€</span>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam suscipit aliquet orci et pellentesque.
+                Phasellus finibus porttitor velit vitae mattis. Sed libero justo, consequat nec ornare vel, congue a
+                enim. Vivamus semper condimentum odio eu elementum. Nulla venenatis a magna sit amet consectetur. Sed id
+                blandit neque, sed pellentesque lacus. Curabitur vitae dictum nunc, quis rutrum ante. Morbi quis
+                suscipit tellus, sed pretium mauris. Donec posuere elit eu dictum condimentum. Pellentesque interdum
+                purus massa, at sodales sem fermentum ornare. Duis pulvinar nisi ut diam luctus, a pharetra ligula
+                tristique.
             </p>
         </div>
     </section>
